<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".presentation.fragment.intranet.ViewCreditFragment">

    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:src="@drawable/icono_consultasaldo" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:gravity="bottom"
            android:paddingEnd="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingStart="8dp"
            android:text="@string/delivery_information_text"
            android:textColor="@color/colorTextMenu"
            android:textSize="18sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingLeft="30dp"
                android:paddingStart="30dp"
                android:text="@string/delivery_place"
                android:textColor="@android:color/black" />

            <Spinner
                android:id="@+id/sp_delivery_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_spinner"
                android:prompt="@string/choose_text"
                android:spinnerMode="dropdown" />

            <LinearLayout
                android:id="@+id/ll_delivery_information_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="30dp"
                    android:paddingStart="30dp"
                    android:text="@string/department"
                    android:textColor="@android:color/black" />

                <Spinner
                    android:id="@+id/sp_department"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/background_spinner"
                    android:prompt="@string/choose_text"
                    android:spinnerMode="dropdown" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="30dp"
                    android:paddingStart="30dp"
                    android:text="@string/province"
                    android:textColor="@android:color/black" />

                <Spinner
                    android:id="@+id/sp_province"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/background_spinner"
                    android:prompt="@string/choose_text"
                    android:spinnerMode="dropdown" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="30dp"
                    android:paddingStart="30dp"
                    android:text="@string/district"
                    android:textColor="@android:color/black" />

                <Spinner
                    android:id="@+id/sp_district"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/background_spinner"
                    android:prompt="@string/choose_text"
                    android:spinnerMode="dropdown" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingLeft="30dp"
                android:paddingStart="30dp"
                android:text="@string/address_label_required"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_editext_login"
                android:inputType="text"
                android:maxLines="1"
                android:padding="5dp"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingLeft="30dp"
                android:paddingStart="30dp"
                android:text="@string/contact_name_required"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_contact_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_editext_login"
                android:inputType="text"
                android:maxLines="1"
                android:padding="5dp"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingLeft="30dp"
                android:paddingStart="30dp"
                android:text="@string/phone_number_required"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_editext_login"
                android:inputType="phone"
                android:maxLines="1"
                android:padding="5dp"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/bg_button_default"
                android:text="@string/btn_next"
                android:textColor="@color/cardview_light_background" />


        </LinearLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/boton_regresar"
        android:contentDescription="@null"
        android:scaleType="fitXY" />

</LinearLayout>
