<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".presentation.fragment.intranet.ViewCreditFragment">

    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:src="@drawable/icono_consultasaldo" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:gravity="bottom"
            android:paddingEnd="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingStart="8dp"
            android:text="@string/payment_information_text"
            android:textColor="@color/colorTextMenu"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="30dp"
        android:paddingStart="30dp"
        android:text="@string/replacement_cost"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/et_replacement_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_editext_login"
        android:inputType="text"
        android:maxLines="1"
        android:padding="5dp"
        android:text="S/. 20.00"
        android:textSize="12sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="30dp"
        android:paddingStart="30dp"
        android:text="@string/shipping_cost"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/et_shipping_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_editext_login"
        android:inputType="text"
        android:maxLines="1"
        android:padding="5dp"
        android:text="S/. 5.00"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btn_request_replacement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/bg_button_default"
        android:text="@string/btn_request_replacement"
        android:textColor="@color/cardview_light_background" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/boton_regresar"
        android:contentDescription="@null"
        android:scaleType="fitXY" />

</LinearLayout>
