<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="16dp"
    tools:context=".presentation.fragment.intranet.ViewCreditFragment">

    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@null"
            android:src="@drawable/icono_consultasaldo" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:gravity="bottom"
            android:paddingEnd="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingStart="8dp"
            android:text="@string/replace_card_text"
            android:textColor="@color/colorTextMenu"
            android:textSize="18sp" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_choose_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_title"
        android:layout_marginTop="20dp"
        android:paddingLeft="30dp"
        android:paddingStart="30dp"
        android:text="@string/card_text"
        android:textColor="@android:color/black" />

    <Spinner
        android:id="@+id/sp_cards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_choose_card"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_spinner"
        android:prompt="@string/choose_text"
        android:spinnerMode="dropdown" />

    <LinearLayout
        android:id="@+id/ll_card_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:orientation="vertical"
        android:padding="30dp"
        android:visibility="invisible"
        android:layout_below="@+id/sp_cards"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <!--
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fecha:"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/black" />
        -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tarjeta"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_card_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Saldo"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_credit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_manage_card_replenishment"
        android:layout_above="@+id/iv_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_default"
        android:textColor="@color/cardview_light_background"
        android:layout_margin="20dp"
        android:enabled="false"
        android:text="@string/btn_replace_card"/>

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/boton_regresar"
        android:contentDescription="@null"
        android:scaleType="fitXY" />

</RelativeLayout>
