<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="10dp"
    tools:context=".presentation.fragment.intranet.LastMovementsFragment">

    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:src="@drawable/icono_ultimosmovimientos" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:gravity="bottom"
            android:paddingEnd="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingStart="8dp"
            android:text="@string/last_movements_text"
            android:textColor="@color/colorTextMenu"
            android:textSize="18sp" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_choose_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_title"
        android:layout_marginTop="20dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingStart="30dp"
        android:text="@string/choose_number_card"
        android:textColor="@android:color/black" />

    <Spinner
        android:id="@+id/sp_cards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_choose_card"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_spinner"
        android:prompt="@string/choose_text"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sp_cards"
        android:layout_centerInParent="true"
        android:layout_margin="8dp"
        android:gravity="center"
        android:paddingLeft="30dp" />

    <LinearLayout
        android:id="@+id/ll_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_message"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sp_cards"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="Buscar:"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/et_search"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/background_editext_login"
            android:gravity="center_vertical"
            android:inputType="text"
            android:padding="5dp"
            android:textSize="12sp" />
    </LinearLayout>

    <include
        layout="@layout/item_header_movements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_search"
        android:visibility="invisible" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_movement"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/iv_back"
        android:layout_below="@+id/ll_header_movement"
        android:visibility="invisible" />


    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/boton_regresar"
        android:contentDescription="@null" />
</RelativeLayout>
